--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
     <script src="https://cdn.tiny.cloud/1/2ejhh9vscfzh8ssrdz6zerfb93x9zmatio3l0iwfcbfkd8w8/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
   </head>
   <body data-instant-intensity="mousedown">
    
